# sensor_fusion_playground

./: CMakeLists.txt  README.md  path
inc/: bspline.h  matrix.h  path.h  traj.h
src/: bspline.c  main.c  matrix.c  path.c  traj.c
